<resources>
    <string name="app_name">Balbum</string>

    <string name="kakao_app_key">db97a38d74491b60bb09861855a2af39</string>

    <string name="facebook_app_id">333726796797560</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="diary_sample">"오늘은 하늘이 하늘하늘 오늘도 경륜챙챙유림이 잘 크고 있다! 화이링화이링" </string>
    <string name="share_text">공유</string>
    <string name="save_text">저장</string>

    <string name="photo_btn_hint">"ADD PHOTO"</string>
    <string name="memo_btn_hint">"우리 아이는 지금 무엇을 하고 있나요?"</string>
    <string name="memo_btn_hint_event">이벤트이벤트!!</string>

    <string name="start">시작하기</string>
    <string name="already_signed">이미 가입되어 있나요</string>
    <string name="sign_facebook">facebook으로 가입하기</string>
    <string name="sign_email">email로 가입하기</string>
    <string name="ok">확인</string>
    <string name="add">추가하기</string>
    <string name="role">아이와 어떤 관계인가요?(예:슈퍼파월 엄마, 슈퍼히어로 아빠)"</string>
    <string name="add_baby1">처음 오셨어요?</string>
    <string name="add_baby2">새 BALBUM 만들기</string>

    <string name="family_email_auth1">이미 가입한 가족이 있나요? </string>
    <string name="family_email_auth2">BALBUM찾기</string>

    <string name ="family_email_auth3">이미 가입한 가족의 메일을 입력하세요</string>
    <string name="register_later">다음에 할게요</string>

    <string name="camera">카메라</string>
    <string name="gallery">갤러리</string>
    <string name="crop">자르기</string>

    <string name="card_share">공유하기</string>
    <string name="card_delete">삭제하기</string>
    <string name="card_modify">수정하기</string>
    <string name="select_text">선택완료</string>
    <string name="card_photo">갤러리 저장</string>


    <string name="kakao_scheme">kakaodb97a38d74491b60bb09861855a2af39</string>
    <string name="kakaolink_host">kakaolink</string>



</resources>
