<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/add_baby"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/add_baby1"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/add_baby2"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/family_email_auth"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/family_email_auth1"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="30dp"
            android:text="@string/family_email_auth2"
            android:textColor="@color/colorPrimary"
            android:textSize="16dp" />


    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone">

    </FrameLayout>


</LinearLayout>