<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/add_baby_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_camera" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/add_baby_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="우리 사랑스러운 아가의 이름은"
                    android:singleLine="true"
                    android:nextFocusDown="@+id/add_baby_birthday"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp">

                <EditText
                    android:id="@+id/add_baby_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="아가의 생일을 입력하세요"
                    android:focusable="false"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                android:id="@+id/add_baby_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <RadioButton
                    android:id="@+id/radio0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="여" />

                <RadioButton
                    android:id="@+id/radio1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="남" />

                <RadioButton
                    android:id="@+id/radio2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingRight="20dp"
                    android:text="임신중" />

            </RadioGroup>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
    <Button
        android:id="@+id/add_baby_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/primary_round"
        android:text="@string/add"
        android:textColor="@color/colorBase"
        android:layout_marginRight="5dp"/>

    <Button
        android:id="@+id/add_complete_btn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/primary_round"
        android:text="@string/ok"
        android:textColor="@color/colorBase"
        android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/register_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/register_later"
        android:textColor="@color/text" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0.36" />

</LinearLayout>